# palaia

./: .clawhubignore  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT-DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SKILL.md  VECTORDB_EVAL.md  WEBUI_PLAN.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
docs/: analysis-claude-mem-vs-palaia.md  backends.md  claude-code.md  cli-reference.md  configuration.md  embed-server.md  getting-started.md  mcp.md  migration-guide.md  multi-agent.md  skill-authoring-guide.md
palaia/: SKILL.md  __init__.py  __main__.py  bm25.py  cli.py  cli_args.py  cli_commands.py  cli_helpers.py  cli_nudge.py  config.py  curate.py  decay.py  doctor.py  embed_client.py  embed_server.py  embeddings.py  entry.py  enums.py  frontmatter.py  index.py  ingest.py  lock.py  locking.py  memo.py  metadata_index.py  migrate.py  nudge.py  packages.py  priorities.py  process_runner.py  project.py  scope.py  search.py  significance.py  store.py  sync.py  ui.py  wal.py
script/: setup
tests/: conftest.py  test_agent_aliases.py  test_agent_flag.py  test_audit_fixes.py  test_auto_title.py  test_backend_migrate.py  test_backend_postgres.py  test_backend_sqlite.py  test_backup_restore.py  test_bm25.py  test_bounded_gc.py  test_capture_level.py  test_chain_cli.py  test_concurrent_writes.py  test_config.py  test_config_detection.py  test_cross_platform_lock.py  test_cross_project.py  test_curate.py  test_decay.py  test_detect.py  test_doctor.py  test_doctor_fix_chain.py  test_doctor_memos.py  test_embeddings.py  (+49 more)
(+46 files in other folders)
